--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "lint": "npm-run-all -s lint:tsc lint:eslint lint:stylelint",
     "lint:tsc": "vue-tsc --noEmit",
-    "lint:eslint": "eslint src/**/*.{ts,tsx,vue} --cache --fix",
+    "lint:eslint": "eslint src/**/*.{ts,vue} --cache --fix",
     "lint:stylelint": "stylelint src/**/*.{css,scss,vue} --cache --fix",
     "postinstall": "simple-git-hooks",
     "preinstall": "npx only-allow pnpm",
@@ -24,16 +24,27 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.34.1",
+    "@types/bootstrap": "^5.2.6",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "cz-git": "^1.4.1",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^31.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-tsdoc": "^0.2.17",
     "eslint-plugin-vue": "^9.9.0",
+    "lint-staged": "^13.1.0",
+    "postcss-html": "^1.5.0",
     "sass": "^1.57.1",
+    "stylelint": "^14.16.1",
+    "stylelint-config-standard": "^29.0.0",
+    "stylelint-config-standard-scss": "^6.1.0",
+    "stylelint-config-standard-vue": "^1.0.0",
+    "stylelint-scss": "^4.3.0",
     "typescript": "^4.9.4",
     "unplugin-auto-import": "^0.12.1",
     "unplugin-vue-components": "^0.22.12",
