feat: 增加 login register 页面
Co-authored-by: ygqygq2 <29ygq@sina.com>

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
-  "plugins": ["@typescript-eslint/eslint-plugin", "eslint-plugin-tsdoc"],
-  "extends": ["plugin:@typescript-eslint/recommended", "@antfu"],
+  "plugins": ["unused-imports", "@typescript-eslint/eslint-plugin", "eslint-plugin-tsdoc"],
+  "extends": ["plugin:@typescript-eslint/recommended", "@antfu", ".eslintrc-auto-import.json"],
   "parser": "vue-eslint-parser",
   "parserOptions": { "parser": "@typescript-eslint/parser" },
   "rules": {
@@ -8,10 +8,39 @@
     "semi": ["warn", "always"],
     "@typescript-eslint/semi": ["warn", "always"],
     "quotes": "off",
-    "@typescript-eslint/quotes": ["warn", "double"],
+    "@typescript-eslint/quotes": ["warn", "double", { "avoidEscape": true, "allowTemplateLiterals": true }],
     "tsdoc/syntax": "warn",
     // Note: you must disable the base rule as it can report incorrect errors
     "comma-dangle": "off",
-    "@typescript-eslint/comma-dangle": ["off", "only-multiline"]
+    "@typescript-eslint/comma-dangle": ["off", "only-multiline"],
+    // 模块导入顺序规则
+    "import/order": [
+      1,
+      {
+        "pathGroups": [
+          {
+            "pattern": "@/**",
+            "group": "external",
+            "position": "after"
+          }
+        ],
+        "alphabetize": { "order": "asc", "caseInsensitive": false },
+        "newlines-between": "always-and-inside-groups",
+        "warnOnUnassignedImports": true
+      }
+    ],
+    // 自动删除未使用的导入
+    // https://github.com/sweepline/eslint-plugin-unused-imports
+    "unused-imports/no-unused-imports": 1,
+    "unused-imports/no-unused-vars": [
+      "error",
+      {
+        "vars": "all",
+        "args": "none",
+        "ignoreRestSiblings": true
+      }
+    ],
+    // ES6+
+    "no-console": 0
   }
 }
