--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@popperjs/core": "^2.11.6",
     "axios": "^1.2.3",
     "bootstrap": "^5.2.3",
+    "lodash-es": "^4.17.21",
     "pinia": "^2.0.29",
+    "pinia-plugin-persistedstate": "^3.0.2",
     "validator": "^13.7.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
@@ -28,10 +30,12 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.34.1",
     "@types/bootstrap": "^5.2.6",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "^18.11.18",
     "@types/validator": "^13.7.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "commitizen": "^4.3.0",
     "cz-git": "^1.4.1",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^31.0.0",
