--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     "eslint-plugin-tsdoc": "^0.2.17",
     "eslint-plugin-unused-imports": "^2.0.0",
     "eslint-plugin-vue": "^9.9.0",
+    "eslint-plugin-zhlint": "^1.0.1",
     "lint-staged": "^13.1.0",
     "postcss-html": "^1.5.0",
     "sass": "^1.57.1",
+    "simple-git-hooks": "^2.8.1",
     "stylelint": "^14.16.1",
     "stylelint-config-standard": "^29.0.0",
     "stylelint-config-standard-scss": "^6.1.0",
@@ -60,7 +62,7 @@
     "vue-tsc": "^1.0.11"
   },
   "simple-git-hooks": {
-    "pre-commit": "source ~/.bashrc && pnpm lint-staged",
+    "pre-commit": "pnpm lint-staged",
     "preserveUnused": true
   },
   "config": {
